--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "check:prettier": "prettier --check \"{src,test}/**/*.ts\"",
     "fix:lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "check:lint": "eslint \"{src,test}/**/*.ts\"",
-    "format": "yarn format:prettier && yarn fix:lint",
-    "check": "yarn check:prettier && yarn check:lint",
+    "format:all": "yarn format:prettier && yarn fix:lint",
+    "check:all": "yarn check:prettier && yarn check:lint",
     "test": "yarn jest -c jest.config.mjs"
   },
   "dependencies": {
